fix(y): overflow y hidden and max height adjusted for project and skill containers

--- a/styles/style.css
+++ b/styles/style.css
@@ -46,7 +46,6 @@ body {
   justify-content: center;
   align-items: flex-start;
   width: 100%;
-  height: auto;
   margin: 60px 0;
 }
 
@@ -72,6 +71,12 @@ body {
   display: flex;
   flex-direction: column;
   align-items: center;
+}
+
+.container-know,
+.container-project {
+  max-height: 1000px;
+  overflow: hidden;
 }
 
 .container-cv {
